<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_nav"
    app:startDestination="@id/navigation_city">

    <fragment
        android:id="@+id/navigation_city"
        android:name="com.vikche.weatherforecast.ui.home.CityFragment"
        android:label="@string/city"
        tools:layout="@layout/fragment_city" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.vikche.weatherforecast.ui.settings.SettingsActivity"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/navigation_info"
        android:name="com.vikche.weatherforecast.ui.info.InfoFragment"
        android:label="@string/info"
        tools:layout="@layout/fragment_info" />
</navigation>