<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.MaterialAutoCompleteTextView
        android:id="@+id/city_actv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/btns"
        android:fontFamily="sans-serif-thin"
        android:hint="@string/city_hint"
        android:singleLine="true"
        android:textColor="@color/text"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/wind_speed_cb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:buttonTint="@color/btns"
        android:checked="false"
        android:fontFamily="sans-serif-thin"
        android:text="@string/wind_cb"
        android:textColor="@color/text"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/atm_pressure_cb"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/city_actv" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/atm_pressure_cb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:buttonTint="@color/btns"
        android:fontFamily="sans-serif-thin"
        android:text="@string/pressure_cb"
        android:textColor="@color/text"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/city_actv" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/check_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/btns"
        android:fontFamily="sans-serif-thin"
        android:text="@string/check_btn"
        android:textColor="@color/text"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/atm_pressure_cb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/atm_pressure_cb"
        app:layout_constraintTop_toTopOf="@+id/atm_pressure_cb" />

    <ListView
        android:id="@+id/cities_history_lv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:divider="@drawable/card_separator"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/atm_pressure_cb" />

</androidx.constraintlayout.widget.ConstraintLayout>